force: cache busting for index.html (v1.6.3 update verify)

--- a/index.template.html
+++ b/index.template.html
@@ -6,7 +6,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="PayStream Secure Payment" />
-    <title>PayStream Admin</title>
+    <title>PayStream v1.6.3</title>
+    <meta name="version" content="v1.6.3-force" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @keyframes progress-indeterminate {
